--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name="description" content=" пивний блог про пиво і пивоваріння">
+        <meta name="description" content="пивний блог про пиво і пивоваріння">
         <link rel="stylesheet" href="css/index.css">
         <link rel="icon" href="images/hop.jpg">
-        <title>Beer &Brewing Blog </title>
+        <title>Beer&Brewing Blog </title>
     </head>
     <body>
         <header class="page-header">
             <div class="container"></div>
+            
             <nav class="top-menu">
                 <ul class="menu-main">
                     <li>
@@ -24,10 +25,51 @@
                         <a href="beerpubs.html">Пивні місця</a>
                 </ul>
             </nav>
+            <div class="banner">
+            <p class="title">Beer&rewing Blog  <p>
         </header>
-        <img src="images/home-page-beer-river.jpg" height="400" width="1330" alt="основна фотографія сторінки">
+        <div class="banner">
+        <img  src="images/home-page-beer-river.jpg" height="400" width="980" alt="пивний сет">
         <article>Пивний блог для поціновувачів смачного та якісного пива, рецепти та опис найкращих його сортів , технології приготування та місця де можна випити цей чудовий напій. </article>
-        <h2>Остані Публікації</h2>
+        <h2 id="last-publications">Остані Публікації</h2>
+        <main>
+           <h2 id="publications">Публікації</h2>
+           <div class="publications-list">
+            <article class="article-card">
+                <h3>Egan Irish Pub, Ужгород.</h3>
+                <img src="images/Egan.jpeg" alt="Еган паб">
+                <p>Не знаю чому, але чомусь , коли подумав написати про якийсь паб одразу згадав про цей крутий паб в Ужгороді, хоча я сам зі Львова і був в ньому останній раз у 2018 році хороші спогади залишилися і на даний момент. </p>
+                <div class="button-container">
+                    <button class="button card-button">Детальніше</button>
+                </div>
+            </article>
+            <article class="article-card">
+                <h3>Варвар</h3>
+                <img src="images/varvar-mist-sabro.jpg" alt="Новий ель від Варвара">
+                <p>Київська пивоварня «Varvar» випустила новий сорт – пиво “Mist: Sabro” (12.5%, алк. 5.3%) стиля Milkshake IPA охмелене новим виведеним сортом хмелю Sabro..</p>
+                <div class="button-container">
+                    <button class="button card-button">Детальніше</button>
+                </div>
+            </article>
+            <article class="article-card">
+                <h3>Banana Bread Beer -Eagle Brewery</h3>
+                <img src="images/Eagle-Image-Banana-Bread.png" alt="Бананове пиво">
+                <p>Пиво зі смаком банана.</p>
+                <div class="button-container">
+                    <button class="button card-button">Детальніше</button>
+                </div>
+            </article>
+            <article class="article-card">
+                <h3>Sticky Toffee Pudding - Eagle Brewery</h3>
+                <img src="images/Eagle-Image-Sticky-Toffee.png" alt="Пиво зі смаком Пудинга">
+                <p>Пиво зі смаком пудинга.</p>
+                <div class="button-container">
+                    <button class="button card-button">Детальніше</button>
+                </div>
+            </article>
+    </main>
+
+        
         <h3>
             <a href="aboutme.html">Про мене</a>
         </h3>
