--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         <link rel="stylesheet" href="css/index.css">
         <link rel="icon" href="images/hop.jpg">
         <title>Beer&Brewing Blog </title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
-    <body>
+    <body class="container">
         <header class="page-header">
             <div class="container"></div>
             
@@ -28,48 +30,127 @@
             <div class="banner">
             <p class="title">Beer&Brewing Blog </p>
             </div>
+            <div id="carouselBeersAndBrew" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselBeersAndBrew" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselBeersAndBrew" data-slide-to="1"></li>
+    <li data-target="#carouselBeersAndBrew" data-slide-to="2"></li>
+    <li data-target="#carouselBeersAndBrew" data-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/home-page-beer-river.jpg" class="d-block w-100" alt="пивний сет">
+    </div>
+    <div class="carousel-item">
+      <img src="images/brewing-mainpage.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="images/pab.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="images/beer-mainpage.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselBeersAndBrew" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselBeersAndBrew" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
         </header>
-        <div class="banner">
-        <img  src="images/home-page-beer-river.jpg" height="400" width="980" alt="пивний сет">
-        <h2 id="last-publications">Остані Публікації</h2>
-        </div>
-        <main>
-           <h2 id="publications">Публікації</h2>
-           <div class="publications-list">
-            <article class="article-card">
-                <h3>Egan Irish Pub, Ужгород.</h3>
-                <img src="images/Egan.jpeg" alt="Еган паб">
-                <p>Не знаю чому, але чомусь , коли подумав написати про якийсь паб одразу згадав про цей крутий паб в Ужгороді, хоча я сам зі Львова і був в ньому останній раз у 2018 році хороші спогади залишилися і на даний момент. </p>
-                <div class="button-container">
-                    <button class="button card-button">Детальніше</button>
-                </div>
-            </article>
-            <article class="article-card">
-                <h3>Варвар</h3>
-                <img src="images/varvar-mist-sabro.jpg" alt="Новий ель від Варвара">
-                <p>Київська пивоварня «Varvar» випустила новий сорт – пиво “Mist: Sabro” (12.5%, алк. 5.3%) стиля Milkshake IPA охмелене новим виведеним сортом хмелю Sabro..</p>
-                <div class="button-container">
-                    <button class="button card-button">Детальніше</button>
-                </div>
-            </article>
-            <article class="article-card">
-                <h3>Banana Bread Beer - Eagle </h3>
-                <img src="images/Eagle-Image-Banana-Bread.png" alt="Бананове пиво">
-                <p>Пиво зі смаком банана.</p>
-                <div class="button-container">
-                    <button class="button card-button">Детальніше</button>
-                </div>
-            </article>
-            <article class="article-card">
-                <h3>Sticky Toffee Pudding - Eagle </h3>
-                <img src="images/Eagle-Image-Sticky-Toffee.png" alt="Пиво зі смаком Пудинга">
-                <p>Пиво зі смаком пудинга.</p>
-                <div class="button-container">
-                    <button class="button card-button">Детальніше</button>
-                </div>
-            </article>
-           </div>
-        </main>
+        <main class="container">
+    <h2>Products</h2>
+    <div class="row">
+  <article class="card col-12 col-sm-6 col-md-4 col-lg-3" >
+  <img src="img/cybertruck.jfif" class="card-img-top" alt="Якась стаття.">
+  <div class="card-body"
+    <h5 class="card-title">Якась стаття.</h5>
+    <p class="card-text">Best truck in the world.</p>
+    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Детальніше</a>
+  </div>
+</article>
+<article class="card col-12 col-sm-6 col-md-4 col-lg-3" >
+  <img src="img/cybertruck.jfif" class="card-img-top" alt="Якась стаття.">
+  <div class="card-body"
+    <h5 class="card-title">Якась стаття.</h5>
+    <p class="card-text">Best truck in the world.</p>
+    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Детальніше</a>
+  </div>
+</article>
+<article class="card col-12 col-sm-6 col-md-4 col-lg-3" >
+  <img src="img/cybertruck.jfif" class="card-img-top" alt="Якась стаття.">
+  <div class="card-body"
+    <h5 class="card-title">Якась стаття.</h5>
+    <p class="card-text">Best truck in the world.</p>
+    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Детальніше</a>
+  </div>
+</article>
+<article class="card col-12 col-sm-6 col-md-4 col-lg-3" >
+  <img src="img/cybertruck.jfif" class="card-img-top" alt="Якась стаття.">
+  <div class="card-body"
+    <h5 class="card-title">Якась стаття.</h5>
+    <p class="card-text">Best truck in the world.</p>
+    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Детальніше</a>
+  </div>
+</article>
+<article class="card col-12 col-sm-6 col-md-4 col-lg-3" >
+  <img src="img/cybertruck.jfif" class="card-img-top" alt="Якась стаття.">
+  <div class="card-body"
+    <h5 class="card-title">Якась стаття.</h5>
+    <p class="card-text">Best truck in the world.</p>
+    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Детальніше</a>
+  </div>
+</article>
+<article class="card col-12 col-sm-6 col-md-4 col-lg-3" >
+  <img src="img/cybertruck.jfif" class="card-img-top" alt="Якась стаття.">
+  <div class="card-body"
+    <h5 class="card-title">Якась стаття.</h5>
+    <p class="card-text">Best truck in the world.</p>
+    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Детальніше</a>
+  </div>
+</article>
+<article class="card col-12 col-sm-6 col-md-4 col-lg-3" >
+  <img src="img/cybertruck.jfif" class="card-img-top" alt="Якась стаття.">
+  <div class="card-body"
+    <h5 class="card-title">Якась стаття.</h5>
+    <p class="card-text">Best truck in the world.</p>
+    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Детальніше</a>
+  </div>
+</article>
+<article class="card col-12 col-sm-6 col-md-4 col-lg-3" >
+  <img src="img/cybertruck.jfif" class="card-img-top" alt="Якась стаття.">
+  <div class="card-body"
+    <h5 class="card-title">Якась стаття.</h5>
+    <p class="card-text">Best truck in the world.</p>
+    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Детальніше</a>
+  </div>
+</article>
+
+    </div>
+    </main>
+	<div class="modal fade" id="productInfoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       Хто проичтав той лох
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+           
         <h3>
             <a id="aboutme" href="aboutme.html">Про мене</a>
         </h3>
@@ -84,4 +165,13 @@
  
         </footer>
     </body>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+	</script>
 </html>
