--- a/brewing.html
+++ b/brewing.html
@@ -7,24 +7,61 @@
      <link rel="stylesheet" href="css/index.css">
      <link rel="icon" href="images/hop.jpg">
     <title>Пивоваріння</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
-<body>
-<header class="page-header">
-<h1></h1>
-    <nav class="top-menu">
-      <ul class="menu-main">
-      <li>
-            <a href="index.html">Домашня сторінка</a>
-        <li>
-            <a href="beer.html">Пиво</a>
-        <li>
-            <a href="brewing.html">Пивоваріння </a>
-        <li>
-            <a href="beerpubs.html">Пивні місця</a>
-        </ul>
-    </nav>
-</header>
-<img src="images/brewing-mainpage.jpg" height="400" width="980" alt="основна фотографія сторінки">
+ <body class="container">
+        <header class="page-header">
+            <div class="container"></div>
+            
+            <nav class="top-menu">
+                <ul class="menu-main">
+                    <li>
+                        <a href="index.html">Домашня сторінка</a>
+                    <li>
+                        <a href="beer.html">Пиво</a>
+                    <li>
+                        <a href="brewing.html">Пивоваріння </a>
+                    <li>
+                        <a href="beerpubs.html">Пивні місця</a>
+                </ul>
+            </nav>
+            <div class="banner">
+            <p class="title">Beer&Brewing Blog </p>
+            </div>
+            <div id="carouselBeersAndBrew" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselBeersAndBrew" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselBeersAndBrew" data-slide-to="1"></li>
+    <li data-target="#carouselBeersAndBrew" data-slide-to="2"></li>
+    <li data-target="#carouselBeersAndBrew" data-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/home-page-beer-river.jpg" class="d-block w-100" alt="пивний сет">
+    </div>
+    <div class="carousel-item">
+      <img src="images/beer-mainpage.jpg" class="d-block w-100" alt="...">
+      <a href="beer.html"></a>
+    </div>
+    <div class="carousel-item">
+      <img src="images/brewing-mainpage.jpg" class="d-block w-100" alt="...">
+      <a href="brewing.html"></a>
+    </div>
+    <div class="carousel-item">
+      <img src="images/pab.jpg" class="d-block w-100" alt="...">images/pab.jpg
+      <a href="beerpubs.html"></a>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselBeersAndBrew" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselBeersAndBrew" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 <footer class="page-footer">
  <svg width="220" height="60">
     <line x1="220" y1="40" x2="5" y2="40" stroke="black"/>
@@ -32,5 +69,13 @@
     <a href="https://t.me/beersandbrewing"> Телеграм канал</a><br>
     Інстаграм
     </footer>
-</body>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+	</script>
 </html>
