--- a/index.html
+++ b/index.html
@@ -42,13 +42,18 @@
       <img src="images/home-page-beer-river.jpg" class="d-block w-100" alt="пивний сет">
     </div>
     <div class="carousel-item">
-      <img src="images/brewing-mainpage.jpg" class="d-block w-100" alt="...">
+      <img src="images/beer-mainpage.jpg" class="d-block w-100" alt="..."
+      <a href="beer.html"></a>
+
+
     </div>
     <div class="carousel-item">
-      <img src="images/pab.jpg" class="d-block w-100" alt="...">
+      <a href="brewing.html"></a>
+      <img src="images/brewing-mainpage.jpg" class="d-block w-100" alt="..." href="brewing.html">
     </div>
     <div class="carousel-item">
-      <img src="images/beer-mainpage.jpg" class="d-block w-100" alt="...">
+      <img src="images/pab.jpg" class="d-block w-100" alt="...">images/pab.jpg
+      <a href="beerpubs.html"></a>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselBeersAndBrew" role="button" data-slide="prev">
