--- a/beerpubs.html
+++ b/beerpubs.html
@@ -49,7 +49,7 @@
       <a href="brewing.html"></a>
     </div>
     <div class="carousel-item">
-      <img src="images/pab.jpg" class="d-block w-100" alt="середньостатистичний паб" >
+      <img src="images/pab.jpg" class="d-block w-100" alt="...">
       <a href="beerpubs.html"></a>
     </div>
   </div>
