--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <img src="images/brewing-mainpage.jpg" class="d-block w-100" alt="..." href="brewing.html">
     </div>
     <div class="carousel-item">
-      <img src="images/pab.jpg" class="d-block w-100" alt="...">images/pab.jpg
+      <img src="images/pab.jpg" class="d-block w-100" alt="...">
       <a href="beerpubs.html"></a>
     </div>
   </div>
@@ -67,73 +67,72 @@
 </div>
         </header>
         <main class="container">
-    <h2>Products</h2>
+    <h2> Остані Публікації</h2><br>
     <div class="row">
-  <article class="card col-12 col-sm-6 col-md-4 col-lg-3" >
-  <img src="img/cybertruck.jfif" class="card-img-top" alt="Якась стаття.">
+  <article class="card col-10 col-sm-6 col-md-4 col-lg-3" >
+  <img src="images/varvar-mist-sabro.jpg" class="card-img-top" alt="Mist: Sabro – новинка від «Varvar»">
   <div class="card-body"
-    <h5 class="card-title">Якась стаття.</h5>
-    <p class="card-text">Best truck in the world.</p>
+    <h5 class="card-title">“Mist: Sabro” – новинка від «Varvar»</h5>
+    <p class="card-text">Київська пивоварня «Varvar» випустила новий сорт – пиво “Mist: Sabro” (12.5%, алк. 5.3%) стиля Milkshake IPA охмелене новим виведеним сортом хмелю Sabro..</p>
     <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Детальніше</a>
   </div>
 </article>
 <article class="card col-12 col-sm-6 col-md-4 col-lg-3" >
-  <img src="img/cybertruck.jfif" class="card-img-top" alt="Якась стаття.">
+  <img src="images/Eagle-Image-Banana-Bread.png" class="card-img-top" alt="Бананове пиво">
   <div class="card-body"
-    <h5 class="card-title">Якась стаття.</h5>
-    <p class="card-text">Best truck in the world.</p>
+    <h5 class="card-title">Banana Bread Beer -Eagle Brewery</h5>
+    <p class="card-text">Мабуть одне з найсмачніших пив з найбільш вираженим смаком бананів яке я пив.</p>
     <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Детальніше</a>
   </div>
 </article>
 <article class="card col-12 col-sm-6 col-md-4 col-lg-3" >
-  <img src="img/cybertruck.jfif" class="card-img-top" alt="Якась стаття.">
+  <img src="images/Eagle-Image-Sticky-Toffee.png" class="card-img-top" alt="Пиво зі смаком пудингу">
   <div class="card-body"
-    <h5 class="card-title">Якась стаття.</h5>
-    <p class="card-text">Best truck in the world.</p>
+    <h5 class="card-title">Sticky Toffee Pudding - Eagle Brewery</h5>
+    <p class="card-text">Flavored beer</p>
     <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Детальніше</a>
   </div>
 </article>
 <article class="card col-12 col-sm-6 col-md-4 col-lg-3" >
-  <img src="img/cybertruck.jfif" class="card-img-top" alt="Якась стаття.">
+  <img src="images/Egan.jpeg" class="card-img-top" alt="Egan Irish Pub.">
   <div class="card-body"
-    <h5 class="card-title">Якась стаття.</h5>
+    <h5 class="card-title">Egan Irish Pub, Ужгород.</h5>
     <p class="card-text">Best truck in the world.</p>
+    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Детальніше</a>
+  </div>
+</article>
+ <article class="card col-10 col-sm-6 col-md-4 col-lg-3" >
+  <img src="images/varvar-mist-sabro.jpg" class="card-img-top" alt="Mist: Sabro – новинка від «Varvar»">
+  <div class="card-body"
+    <h5 class="card-title">“Mist: Sabro” – новинка від «Varvar»</h5>
+    <p class="card-text">Київська пивоварня «Varvar» випустила новий сорт – пиво “Mist: Sabro” (12.5%, алк. 5.3%) стиля Milkshake IPA охмелене новим виведеним сортом хмелю Sabro..</p>
     <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Детальніше</a>
   </div>
 </article>
 <article class="card col-12 col-sm-6 col-md-4 col-lg-3" >
-  <img src="img/cybertruck.jfif" class="card-img-top" alt="Якась стаття.">
+  <img src="images/Eagle-Image-Banana-Bread.png" class="card-img-top" alt="Бананове пиво">
   <div class="card-body"
-    <h5 class="card-title">Якась стаття.</h5>
-    <p class="card-text">Best truck in the world.</p>
+    <h5 class="card-title">Banana Bread Beer -Eagle Brewery</h5>
+    <p class="card-text">Мабуть одне з найсмачніших пив з найбільш вираженим смаком бананів яке я пив.</p>
     <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Детальніше</a>
   </div>
 </article>
 <article class="card col-12 col-sm-6 col-md-4 col-lg-3" >
-  <img src="img/cybertruck.jfif" class="card-img-top" alt="Якась стаття.">
+  <img src="images/Eagle-Image-Sticky-Toffee.png" class="card-img-top" alt="Пиво зі смаком пудингу">
   <div class="card-body"
-    <h5 class="card-title">Якась стаття.</h5>
-    <p class="card-text">Best truck in the world.</p>
+    <h5 class="card-title">Sticky Toffee Pudding - Eagle Brewery</h5>
+    <p class="card-text">Flavored beer</p>
     <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Детальніше</a>
   </div>
 </article>
 <article class="card col-12 col-sm-6 col-md-4 col-lg-3" >
-  <img src="img/cybertruck.jfif" class="card-img-top" alt="Якась стаття.">
+  <img src="images/Egan.jpeg" class="card-img-top" alt="Egan Irish Pub.">
   <div class="card-body"
-    <h5 class="card-title">Якась стаття.</h5>
+    <h5 class="card-title">Egan Irish Pub, Ужгород.</h5>
     <p class="card-text">Best truck in the world.</p>
     <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Детальніше</a>
   </div>
 </article>
-<article class="card col-12 col-sm-6 col-md-4 col-lg-3" >
-  <img src="img/cybertruck.jfif" class="card-img-top" alt="Якась стаття.">
-  <div class="card-body"
-    <h5 class="card-title">Якась стаття.</h5>
-    <p class="card-text">Best truck in the world.</p>
-    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Детальніше</a>
-  </div>
-</article>
-
     </div>
     </main>
 	<div class="modal fade" id="productInfoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -149,8 +148,8 @@
        Хто проичтав той лох
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрити</button>
+        <button type="button" class="btn btn-primary">Зберегти зміни</button>
       </div>
     </div>
   </div>
