--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
       <img src="images/home-page-beer-river.jpg" class="d-block w-100" alt="пивний сет">
     </div>
     <div class="carousel-item">
-      <img src="images/beer-mainpage.jpg" class="d-block w-100" alt="..."
+      <img src="images/beer-mainpage.jpg" class="d-block w-100" alt="різні сорти пива">
       <a href="beer.html"></a>
 
 
     </div>
     <div class="carousel-item">
       <a href="brewing.html"></a>
-      <img src="images/brewing-mainpage.jpg" class="d-block w-100" alt="..." href="brewing.html">
+      <img src="images/brewing-mainpage.jpg" class="d-block w-100" alt="кухлі пива" >
     </div>
     <div class="carousel-item">
       <img src="images/pab.jpg" class="d-block w-100" alt="...">
@@ -65,7 +65,7 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-        </header>
+        
     </header>
     <main class="container">
   <div class="blog">
@@ -75,7 +75,7 @@
         <div class="col-md-4 col-lg-4 col-sm-12">
         <div class="card">
          <div class="card-img">
-          <img align="center" src="images/Egan.jpeg" class="img-fluid">
+          <img align="center" src="images/Egan.jpeg" alt="Вхід в паб" class="img-fluid">
          </div>
          <div class="card-body"> 
          <h4 class="card-title">Egan Irish Pub, Ужгород.</h4>
@@ -95,7 +95,7 @@
         <div class="col-md-4 col-lg-4 col-sm-12">
         <div class="card">
          <div class="card-img">
-          <img align="center" src="images/varvar-mist-sabro.jpg" class="img-fluid">
+          <img align="center" src="images/varvar-mist-sabro.jpg" class="img-fluid" alt="Дизайн Банки">
          </div>
          <div class="card-body"> 
          <h4 class="card-title">“Mist: Sabro”</h4>
@@ -115,7 +115,7 @@
                <div class="col-md-4 col-lg-4 col-sm-12">
         <div class="card">
          <div class="card-img">
-          <img align="center" src="images/Eagle-Image-Banana-Bread.png" class="img-fluid">
+          <img align="center" src="images/Eagle-Image-Banana-Bread.png" class="img-fluid" alt="Бананове пиво">
          </div>
          <div class="card-body"> 
          <h4 class="card-title">Banana Bread Beer</h4>
@@ -128,10 +128,13 @@
   Неповторний пянкий солодкий банановий смак сподобається дуже багатьом любителям пива, якщо любите густі сорти пива цей хлібно-банановий вид буде вам до душі.
  </div>
 </div>
-       </div>
-      </div>
-     </div>  
-     </div>
+</div>
+</div>
+</div>  
+</div>
+</div>
+</div>
+    </main>
            
         <h3>
             <a id="aboutme" href="aboutme.html">Про мене</a>
