--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <link rel="icon" href="images/hop.jpg">
         <title>Beer&Brewing Blog </title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
     </head>
     <body class="container">
         <header class="page-header">
@@ -82,8 +83,8 @@
           <p class="card-text">
            Не знаю чому, але чомусь , коли подумав написати про якийсь паб одразу згадав про цей крутий паб в Ужгороді
           </p>
-          <a data-toggle="collapse" href="#collapseExample">Показати</a>
-<div class="collapse" id="collapseExample">
+          <a data-toggle="collapse" href="#collapseEganPub">Показати</a>
+<div class="collapse" id="collapseEganPub">
  <div class="card card-body">
    Не знаю чому, але чомусь , коли подумав написати про якийсь паб одразу згадав про цей крутий паб в Ужгороді, хоча я сам зі Львова і був в ньому останній раз у 2018 році хороші спогади залишилися і на даний момент. Натрапив на нього зовсім випадково, гуляючи по Ужгороду побачив якийсь такий кусочок Англії чи точніше Ірландії, екстер'єр закладу переносить нас одразу кудись на північ, відкривши червоні двері потрапляєш в прохолодний заклад з хорошою музикою і одразу відчуваєш цей приємний аромат пива. Вибір пива як для пабу не є дуже великим близько 8 кранів, але є і лагери і стаути і пшеничні пива, так що "пивні гурмани" не будуть розчаровані. Багато різних закусок, піц їжа, як для пабу відверто непогана .Ціни помірні. Особисто моя оцінка 7.5/10.
  </div>
@@ -102,8 +103,8 @@
           <p class="card-text">
            “Mist: Sabro” – новинка від «Varvar»
           </p>
-          <a data-toggle="collapse" href="#collapseExample">Показати</a>
-<div class="collapse" id="collapseExample">
+          <a data-toggle="collapse" href="#collapseVarvarSabro">Показати</a>
+<div class="collapse" id="collapseVarvarSabro">
  <div class="card card-body">
   Київська пивоварня «Varvar» випустила новий сорт – пиво “Mist: Sabro” (12.5%, алк. 5.3%) стиля Milkshake IPA охмелене новим виведеним сортом хмелю Sabro.
  </div>
@@ -122,8 +123,8 @@
           <p class="card-text">
            Banana Bread Beer - від відомої британської броварні Eagle.
           </p>
-          <a data-toggle="collapse" href="#collapseExample">Показати</a>
-<div class="collapse" id="collapseExample">
+          <a data-toggle="collapse" href="#collapseBananabeer">Показати</a>
+<div class="collapse" id="collapseBananabeer">
  <div class="card card-body">
   Неповторний пянкий солодкий банановий смак сподобається дуже багатьом любителям пива, якщо любите густі сорти пива цей хлібно-банановий вид буде вам до душі.
  </div>
