--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="пивний блог про пиво і пивоваріння">
         <link rel="stylesheet" href="css/index.css">
         <link rel="icon" href="images/hop.jpg">
-        <title>Beer&Brewing Blog </title>
+        <title class="main-logo">Beer&Brewing Blog </title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -76,26 +76,6 @@
         <div class="col-md-4 col-lg-4 col-sm-12">
         <div class="card">
          <div class="card-img">
-          <img align="center" src="images/Egan.jpeg" alt="Вхід в паб" class="img-fluid">
-         </div>
-         <div class="card-body"> 
-         <h4 class="card-title">Egan Irish Pub, Ужгород.</h4>
-          <p class="card-text">
-           Не знаю чому, але чомусь , коли подумав написати про якийсь паб одразу згадав про цей крутий паб в Ужгороді
-          </p>
-          <a data-toggle="collapse" href="#collapseEganPub">Показати</a>
-<div class="collapse" id="collapseEganPub">
- <div class="card card-body">
-   Не знаю чому, але чомусь , коли подумав написати про якийсь паб одразу згадав про цей крутий паб в Ужгороді, хоча я сам зі Львова і був в ньому останній раз у 2018 році хороші спогади залишилися і на даний момент. Натрапив на нього зовсім випадково, гуляючи по Ужгороду побачив якийсь такий кусочок Англії чи точніше Ірландії, екстер'єр закладу переносить нас одразу кудись на північ, відкривши червоні двері потрапляєш в прохолодний заклад з хорошою музикою і одразу відчуваєш цей приємний аромат пива. Вибір пива як для пабу не є дуже великим близько 8 кранів, але є і лагери і стаути і пшеничні пива, так що "пивні гурмани" не будуть розчаровані. Багато різних закусок, піц їжа, як для пабу відверто непогана .Ціни помірні. Особисто моя оцінка 7.5/10.
- </div>
-</div>
-       </div>
-      </div>
-     </div>  
-     
-        <div class="col-md-4 col-lg-4 col-sm-12">
-        <div class="card">
-         <div class="card-img">
           <img align="center" src="images/varvar-mist-sabro.jpg" class="img-fluid" alt="Дизайн Банки">
          </div>
          <div class="card-body"> 
@@ -105,8 +85,28 @@
           </p>
           <a data-toggle="collapse" href="#collapseVarvarSabro">Показати</a>
 <div class="collapse" id="collapseVarvarSabro">
- <div class="card card-body">
+ <div class="smallcardbody">
   Київська пивоварня «Varvar» випустила новий сорт – пиво “Mist: Sabro” (12.5%, алк. 5.3%) стиля Milkshake IPA охмелене новим виведеним сортом хмелю Sabro.
+ </div>
+</div>
+       </div>
+      </div>
+     </div>  
+
+        <div class="col-md-4 col-lg-4 col-sm-12">
+        <div class="card">
+         <div class="card-img">
+          <img align="center" src="images/vlasnuy.png" alt="Емблема" class="img-fluid">
+         </div>
+         <div class="card-body"> 
+         <h4 class="card-title">Власний імпорт від “Сільпо”.</h4>
+          <p class="card-text">
+           Сільпо призентує дуже широку лінійку імпортного пива.
+          </p>
+          <a data-toggle="collapse" href="#collapseVlasnuy">Показати</a>
+<div class="collapse" id="collapseVlasnuy">
+ <div class="smallcardbody">
+  Асортимент пивного імпорту є доволі широким, імпортується з  дванадцятьох країн таких, як  Бельгія, Австрія,Іспанія, Італія, Велика Британія, Данія, Нідерланди, Чехія, Франція, Німеччина та США. Та представлений більше ніж 50 різними брендами. Що саме цікаве акцент зроблений на Крафт, тому кожен любитель крафтового пивоваріння зможе знайти щось цікаве саме для себе.
  </div>
 </div>
        </div>
@@ -125,8 +125,8 @@
           </p>
           <a data-toggle="collapse" href="#collapseBananabeer">Показати</a>
 <div class="collapse" id="collapseBananabeer">
- <div class="card card-body">
-  Неповторний пянкий солодкий банановий смак сподобається дуже багатьом любителям пива, якщо любите густі сорти пива цей хлібно-банановий вид буде вам до душі.
+ <div class="smallcardbody">
+  Неповторний п'янкий солодкий банановий смак сподобається  багатьом любителям пива, якщо любите густі сорти пива цей хлібно-банановий вид буде вам до душі.
  </div>
 </div>
 </div>
