--- a/beerpubs.html
+++ b/beerpubs.html
@@ -62,12 +62,32 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+<main>
+
+  <div class="beerpabs" style="max-width: 540px;">
+    <div class="row&nbspno-gutters">
+      <div class="col-md-4">
+        <img src="images/Egan.jpeg" class="card-img" alt="вхід в паб">
+      </div>
+      <div class="row">
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Egan Irish Pub, Ужгород..</h5>
+          <p class="card-text"><b>Не знаю чому, але чомусь , коли подумав написати про якийсь паб одразу згадав про цей крутий паб в Ужгороді, хоча я сам зі Львова і був в ньому останній раз у 2018 році хороші спогади залишилися і на даний момент. Натрапив на нього зовсім випадково, гуляючи по Ужгороду побачив якийсь такий кусочок Англії чи точніше Ірландії, екстер'єр закладу переносить нас одразу кудись на північ, відкривши червоні двері потрапляєш в прохолодний заклад з хорошою музикою і одразу відчуваєш цей приємний аромат пива. Вибір пива як для пабу не є дуже великим близько 8 кранів, але є і лагери і стаути і пшеничні пива, так що "пивні гурмани" не будуть розчаровані. Багато різних закусок, піц їжа, як для пабу відверто непогана .Ціни помірні. Особисто моя оцінка 7.5/10.</b>
+          <p class="card-text"><small class="text-muted">Last updated 23.03.2020 11:48</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  </main>
+  
+  
 <footer class="page-footer">
  <svg width="220" height="60">
     <line x1="220" y1="40" x2="5" y2="40" stroke="black"/>
     </svg> <br>
     <a href="https://t.me/beersandbrewing"> Телеграм канал</a><br>
-    Інстаграм
     </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
