--- a/brewing.html
+++ b/brewing.html
@@ -62,12 +62,31 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+<div class="beerbrew" style="max-width: 540px;">
+  <div class="row&nbspno-gutters">
+    <div class="col-md-4">
+      <img src="images/solod-beer.jpg" class="card-img" alt="солод і пиво">
+    </div>
+    <div class="row">
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Сухі чи рідкі дріжді?</h5>
+        <p class="card-text">Рідкі дріжджі мають чимало переваг. Головна – вони пропонують набагато більше розмаїття штамів, ніж сухі. Адже деякі сорти  пива не можна зробити якісно без рідких дріжджів, просто тому, що вони не мають еквівалентних штамів у висушеній формі. Справа в тому, що не всі дріжджові штами добре переносять процес сушки,  і тому в рідкій формі є набагато більше штамів порівняно з сухими. Це стосується, наприклад, таких бельгійських сортів як «блонд», «дубль», «тріпль». Багато пивоварів стверджують, що неможливо виготовити хороше бельгійське пиво з використанням сухих дріжджів.
+
+          Виготовлення пива з рідкими дріжджами є більш вимогливим, але не таким складним, як може здатися.  А смак пива, посилений рідкими дріжджами, – чудова винагорода за їх використання у пивоварні.</p>
+        <p class="card-text"><small class="text-muted">Last updated 23.03.2020 11:48</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</main>
 <footer class="page-footer">
  <svg width="220" height="60">
     <line x1="220" y1="40" x2="5" y2="40" stroke="black"/>
     </svg> <br>
     <a href="https://t.me/beersandbrewing"> Телеграм канал</a><br>
-    Інстаграм
+  
     </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
