--- a/index.html
+++ b/index.html
@@ -141,14 +141,17 @@
             <a id="aboutme" href="aboutme.html">Про мене</a>
         </h3>
         <img src="images/aboutmephoto.jpg" height="250" width="200" alt="фотографія Юри Михайлів">
+        <img src="images/aboutmephoto.jpg" height="250" width="200" alt="фотографія Юри Михайлів">
         <footer class="page-footer">
             <svg width="220" height="60">
                 <line x1="220" y1="40" x2="5" y2="40" stroke="black"/>
             </svg>
             <br>
-          
+          <h4>Надмірне зловживання алкоголем робить тебе не класним пам'ятай це</h4>
             <a id="telegram" href="https://t.me/beersandbrewing">Телеграм канал</a>
-            
+            <div class="footer-copyright text-center py-3">© 2020 Lemberg:
+              <a id="link" href="https://yuriimykhailiv.github.io/beerandbreewing/">Beer&Breewing</a>
+            </div>
  
         </footer>
     </body>
